<resources>
    <string name="app_name">Chess Clock</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_clock_description">Add clock</string>
    <string name="thumbnail_clock_description">Chess clock thumbnail</string>
    <string name="clock_item_times">%1$dm vs %2$dm</string>
    <string name="bullet_type">Bullet</string>
    <string name="blitz_type">Blitz</string>
    <string name="rapid_type">Rapid</string>
    <string name="classic_type">Classic</string>
    <string name="time_label">Time</string>
    <string name="increment_label">Increment</string>
    <string name="player_one_label">Player One</string>
    <string name="player_two_label">Player Two</string>
    <string name="same_times_switch">Same as Player One</string>
    <string name="clock_list_appbar_title">Clock List</string>
    <string name="clock_list_appbar_description">Clock list</string>
    <string name="settings_appbar_title">Settings</string>
    <string name="settings_app_bar_description">Settings</string>
    <string name="back_icon_description">Back</string>
    <string name="exit_icon_description">Exit</string>
    <string name="sound_settings_icon_description">Go to settings</string>
    <string name="sound_option_menu_title">Sound Settings</string>
    <string name="sound_settings_title">Sound</string>
    <string name="sound_settings_summary">After each move</string>
    <string name="vibrate_settings_title">Vibrate</string>
    <string name="low_time_warning_settings_title">Low time warning</string>
    <string name="alert_time_title">Alert time</string>
    <string name="clock_font_size_title">Clock font size</string>
    <string name="option_menu_save_title">Save</string>
    <string name="app_bar_edit_title">Edit Clock</string>
    <string name="app_bar_create_title">New Clock</string>
    <string name="no_increment_clock">No increment</string>
    <string name="increment_clock">Increment %1$s</string>
    <string name="alert_time_icon_description">Alert time icon</string>
    <string name="tap_to_start_hint">Tap to start</string>
    <string name="initial_moves_text">0</string>
    <string name="edit_menu_item">Edit</string>
    <string name="delete_menu_item">Delete</string>
    <string name="empty_clock_list_advice">You must have at least one clock</string>
    <string name="delete_clock_title">Delete clock</string>
    <string name="delete_clock_message">Please confirm</string>
    <string name="delete_clock_confirm_button">OK</string>
    <string name="paused_clock_hint">Tap to resume</string>
    <string name="reset_timer_title">Reset Timer</string>
    <string name="reset_button">Reset</string>
    <string name="cancel_button">Cancel</string>
    <string name="timer_picker_title">Select time</string>
    <string name="set_time_button">OK</string>
    <string name="settings_button_description">Settings</string>
    <string name="reset_clocks_button_description">Reset clocks</string>
    <string name="pause_clocks_button_description">Pause clocks</string>
    <string name="player_one_button_description">Player one time</string>
    <string name="player_two_button_description">Player two time</string>
    <string name="increment_button_description">Increment time</string>
    <string name="low_time_warning_setting_description">Low time warning setting</string>
    <string name="vibrate_setting_description">Vibrate setting</string>
    <string name="alert_time_description">Select alert time</string>
    <string name="hours">Hours</string>
    <string name="hour_picker_description">Hours selector</string>
    <string name="minutes">Minutes</string>
    <string name="minutes_picker_description">Minutes selector</string>
    <string name="seconds">Seconds</string>
    <string name="seconds_picker_description">Seconds selector</string>
    <string name="save_clock_description">Save clock</string>
    <string name="select_theme_description">Choose a theme</string>
    <string name="select_theme_title">Themes</string>
    <string name="time_up">Time Up</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>

</resources>