<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:theme="@style/Theme.One">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/clock_list_appbar_title"
            android:contentDescription="@string/clock_list_appbar_description"
            app:navigationContentDescription="@string/back_icon_description"
            app:navigationIcon="@drawable/ic_arrow_back"
            style="@style/Widget.MaterialComponents.Toolbar.Surface"
            app:menu="@menu/settings_app_bar_menu"/>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/clock_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        tools:listitem="@layout/chess_clock_item_list"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addClock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:backgroundTint="?attr/playerOneColor"
        app:layout_behavior="com.google.android.material.floatingactionbutton.FloatingActionButton$Behavior"
        app:srcCompat="@drawable/ic_add"
        app:tint="?attr/playerOneTextColor"
        android:layout_gravity="bottom|end"
        android:contentDescription="@string/add_clock_description" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>