<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SettingsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/settings_appbar_title"
            android:contentDescription="@string/settings_app_bar_description"
            app:navigationContentDescription="@string/back_icon_description"
            app:navigationIcon="@drawable/ic_arrow_back"
            style="@style/Widget.MaterialComponents.Toolbar.Surface" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="16dp"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp">

            <TextView
                android:id="@+id/sound_settings_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sound_settings_title"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/sound_settings_summary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="spread" />

            <TextView
                android:id="@+id/sound_settings_summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sound_settings_summary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sound_settings_title" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/sound_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp">

            <TextView
                android:id="@+id/vibrate_settings_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vibrate_settings_title"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/vibrate_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp">

            <TextView
                android:id="@+id/low_time_warning_settings_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/low_time_warning_settings_title"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/low_time_warning_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="16dp"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp">

            <TextView
                android:id="@+id/alert_time_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alert_time_title"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/alert_time_summary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="spread" />

            <TextView
                android:id="@+id/alert_time_summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="20 seg"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/alert_time_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>