<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="16dp"
    android:paddingHorizontal="8dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/small_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="4dp"
        android:paddingHorizontal="8dp">

        <ImageView
            android:id="@+id/small_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_check"
            android:visibility="invisible"
            android:layout_marginHorizontal="10dp"
            android:padding="4dp"/>
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/small"
            android:padding="4dp"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/medium_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:orientation="horizontal"
        android:paddingHorizontal="8dp">

        <ImageView
            android:id="@+id/medium_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_check"
            android:visibility="invisible"
            android:layout_marginHorizontal="10dp"
            android:padding="4dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/medium"
            android:padding="4dp"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/large_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:orientation="horizontal"
        android:paddingHorizontal="8dp">

        <ImageView
            android:id="@+id/large_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_check"
            android:visibility="invisible"
            android:layout_marginHorizontal="10dp"
            android:padding="4dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/large"
            android:padding="4dp"
            android:layout_gravity="center"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginHorizontal="4dp"
        android:background="@color/black"/>

    <Button
        android:id="@+id/confirm_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/blue_600"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:text="ok"/>


</LinearLayout>