<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".create_edit_clock.CreateEditClockFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationContentDescription="@string/close_icon_description"
            app:navigationIcon="@drawable/ic_close"
            app:menu="@menu/create_edit_clock_menu"
            style="@style/Widget.MaterialComponents.Toolbar.Surface" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <TextView
            android:id="@+id/player_one_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_one_label"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/player_one_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintTop_toBottomOf="@id/player_one_header">
            <include
                android:id="@+id/player_one"
                layout="@layout/clock_time_increment" />
        </LinearLayout>


        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/black"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/player_one_container" />

        <TextView
            android:id="@+id/player_two_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            android:text="@string/player_two_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <LinearLayout
            android:id="@+id/player_two_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintTop_toBottomOf="@id/player_two_header">
            <include
                android:id="@+id/player_two"
                layout="@layout/clock_time_increment" />
        </LinearLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/same_time_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:switchPadding="16dp"
            android:checked="true"
            android:text="@string/same_times_switch"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/player_two_container" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>